# video-player-rs

./: .gitignore  Cargo.toml
examples/: create_video.rs  player.rs
src/: lib.rs
