[package]
name = "video-reader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="*", features=["derive"]}
serde_json = "*"

[dev-dependencies]
macroquad = "0.3"

[profile.release]
lto = true
strip = true
opt-level = 's'

[profile.dev.package.'*']
opt-level = 3
